--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>TntSite</title>
+    <title>Tennessee Network Technologies, Inc.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,5 +21,6 @@
     <script src="{{rootURL}}assets/tnt-site.js"></script>
 
     {{content-for "body-footer"}}
+    <script src="https://use.fontawesome.com/2b59555316.js"></script>
   </body>
 </html>
