playing with font and color

--- a/app/index.html
+++ b/app/index.html
@@ -22,5 +22,7 @@
 
     {{content-for "body-footer"}}
     <script src="https://use.fontawesome.com/2b59555316.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fanwood+Text" rel="stylesheet">
   </body>
 </html>
