--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/tnt-site.css">
 
+    <link rel="shortcut icon" type="image/png" href="img/tnt-icon.png"/>
+
     {{content-for "head-footer"}}
   </head>
   <body>
